# self_study

./: .gitignore  README.md
completed/computer_networking_top_down/ch2_socket_app/: README.md  tcpClient.py  tcpServer.py  udpClient.py  udpServer.py
completed/computer_networking_top_down/http_server/: .gitignore  Makefile  README.md  definitions.py  main.py  pyproject.toml
completed/computer_networking_top_down/http_server/http_server_types/: header.py  method.py  request_line.py  response.py
completed/computer_networking_top_down/http_server/tests/: test_parsers.py
completed/computer_networking_top_down/http_server/utils/: http_handlers.py  parsers.py  send_response.py  socket.py
completed/computer_networking_top_down/smtp/: mail_client.py
completed/computer_networking_top_down/udp_pinger/: README.md  UDPPingerClient.py  UDPPingerServer.py
computer_networking_top_down/icmp_pinger/: README.md  icmp_pinger.py  pyproject.toml
computer_networking_top_down/smtp/: README.md  mail_client.py  pyproject.toml
d3_in_depth/: index.html  package.json  pnpm-lock.yaml
d3_in_depth/src/: App.tsx  Selections.tsx
learncpp.com/ch6/: 6.1_quiz.md  6.3.2.cpp  6.3_quiz.md  6.8_quiz.md  a.out  ch_quiz.cpp
learncpp.com/ch7/: 7-3.cpp  7-3_quiz.md  a.out  ch7_quiz.md  quiz_accumulate.cpp
learncpp.com/ch8/: 8-6.cpp  8-8.cpp  8-final-1.cpp  8-final-2.cpp  a.out
ocaml_correct_efficient/calculator/: dune-project
ocaml_correct_efficient/calculator/_build/: .db  .digest-db  log
ocaml_correct_efficient/exercises/: chapter_2.md
ocaml_exercises/: dune-project
ocaml_exercises/_build/: .db  .digest-db  log
ocaml_exercises/_build/default/: ocaml_exercises.dune-package  ocaml_exercises.install
ocaml_exercises/_build/default/.dune/: configurator
ocaml_exercises/_build/default/lib/: ocaml_exercises.cma  ocaml_exercises.cmxa  ocaml_exercises.cmxs
ocaml_exercises/lib/: dune
ocaml_exercises/test/: dune
ostep/projects/_initial-reverse/: reverse  reverse.c
ostep/projects/_initial-utilities/wcat/: wcat  wcat.c
ostep/projects/_initial-utilities/wgrep/: wgrep  wgrep.c
ostep/projects/_initial-utilities/wunzip/: wunzip  wunzip.c
ostep/projects/initial-kv/: Makefile  kv  kv.c
ostep/projects/processes-shell/: CMakeLists.txt  Makefile  cmake_install.cmake  wish  wish.cpp  wish_lib.cpp  wish_test.cpp
(+21 files in other folders)
